# H.IAAC

flower_code/: .gitignore  analyze_multiseed.py  client_app.py  compare.py  gen_proportional_profile_v1.py  gen_sim_profile.py  pyproject.toml  requirements.txt  run_motiv_experiment_4.sh  run_parameter_experiment_1.sh  server_app.py  tests-plan.txt  todo.txt
flower_code/.cache_fedcs/: client_0_indices.pkl  client_19_indices.pkl  client_1_indices.pkl  client_20_indices.pkl  client_21_indices.pkl  client_3_indices.pkl  client_40_indices.pkl  client_43_indices.pkl  client_47_indices.pkl  client_53_indices.pkl  client_5_indices.pkl  client_81_indices.pkl  client_86_indices.pkl  client_8_indices.pkl  client_96_indices.pkl
flower_code/client/: base.py  fedcs.py  feddyn.py
flower_code/experiments/premotivational/analysis/: recombination.ipynb
flower_code/experiments/solution_metrics/: delta_loss.md  fedcs_pretrain_sweep.md
flower_code/gen_profile/: gen_proportional_profile_v2.py
flower_code/model/: Shufflenet_v2_x0_5.pth  simplecnn.pth
flower_code/outputs/05-12-2025/fedavg_fedcs_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/06-11-2025/fedavg_divfl_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/09-02-2026/fedavg_fedcs_constant_10_pretrain10_battery_False_dataset_cifar10_dir_0.3_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/09-02-2026/fedavg_fedcs_constant_10_pretrain30_battery_False_dataset_cifar10_dir_0.3_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/09-02-2026/fedavg_fedcs_constant_10_pretrain50_battery_False_dataset_cifar10_dir_0.3_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/09-02-2026/fedavg_fedcs_constant_10_pretrain70_battery_False_dataset_cifar10_dir_0.3_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/09-02-2026/fedavg_fedcs_constant_10_pretrain90_battery_False_dataset_cifar10_dir_0.3_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/10-02-2026/fedavg_fedcs_constant_10_pretrain10_battery_False_dataset_cifar10_dir_1.0_seed_2/: model_performance.json  system_performance.json
flower_code/outputs/10-02-2026/fedavg_fedcs_constant_10_pretrain10_battery_False_dataset_cifar10_dir_1.0_seed_3/: model_performance.json  system_performance.json
flower_code/outputs/10-02-2026/fedavg_fedcs_constant_10_pretrain50_battery_False_dataset_cifar10_dir_1.0_seed_2/: model_performance.json  system_performance.json
flower_code/outputs/10-02-2026/fedavg_fedcs_constant_10_pretrain90_battery_False_dataset_cifar10_dir_1.0_seed_2/: model_performance.json  system_performance.json
flower_code/outputs/11-02-2026/fedavg_fedcs_constant_10_pretrain10_battery_False_dataset_cifar10_dir_1.0_seed_4/: model_performance.json  system_performance.json
flower_code/outputs/11-02-2026/fedavg_fedcs_constant_10_pretrain50_battery_False_dataset_cifar10_dir_1.0_seed_3/: model_performance.json  system_performance.json
flower_code/outputs/11-02-2026/fedavg_fedcs_constant_10_pretrain50_battery_False_dataset_cifar10_dir_1.0_seed_4/: model_performance.json  system_performance.json
flower_code/outputs/11-02-2026/fedavg_fedcs_constant_10_pretrain90_battery_False_dataset_cifar10_dir_1.0_seed_3/: model_performance.json  system_performance.json
flower_code/outputs/11-02-2026/fedavg_fedcs_constant_10_pretrain90_battery_False_dataset_cifar10_dir_1.0_seed_4/: model_performance.json  system_performance.json
flower_code/outputs/12-01-2026/fedavg_fedcs_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/13-11-2025/fedavg_divfl_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/15-01-2026/fedavg_fedcs_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/15-01-2026/fedavg_random_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/17-01-2026/fedavg_fedcs_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/18-11-2025/fedavg_feddyn_constant_5_battery_True_dataset_cifar10_dir_1.0_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/outputs/23-10-2025/fedavg_random_constant_5_battery_False_dataset_cifar10_dir_1.0_seed_1/: model_performance.json  system_performance.json
flower_code/outputs/27-01-2026/fedavg_fedcs_constant_2_battery_True_dataset_cifar10_dir_1.0_seed_1/: model_performance.json
flower_code/outputs/28-01-2026/fedavg_fedcs_constant_10_pretrain10_battery_True_dataset_cifar10_dir_0.3_seed_1/: client_state.json  model_performance.json  system_performance.json
flower_code/profiles/: profiles.json
flower_code/run_exp/: run_fedcs_pretrain_sweep.sh  run_motiv_experiment_1.sh  run_motiv_experiment_2.sh  run_motiv_experiment_3.sh
flower_code/server/strategy/: FedWMSAM_constant.py  base.py  fedavg_divfl_constant.py  fedavg_power_of_choice.py  fedavg_random_criticalfl.py  fedavg_random_feddyn.py  fedcs_strategy.py  proposta_filipe.pdf:Zone.Identifier
flower_code/test/: adaptação-fgn.txt  base_codes.ipynb  cka.py  eoss.py  fedfim.py  fgn.py  gpu.py  plot_fgn.py  sms.py
flower_code/test/Comp_FIM/: maths.py  utils.py
flower_code/test/Comp_FIM/generator/: jacobian.py
flower_code/utils/dataset/: partition.py
flower_code/utils/model/: factory.py  manipulation.py
flower_code/utils/profile/: Mobilenet_v2.json  bandwidth.json  simplecnn_scaled.json
flower_code/utils/simulation/: config.py  profile.py  workflow.py
flower_code/utils/strategy/: critical_point.py  divfl.py
(+338 files in other folders)
