[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perf_eval_cs_fl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "datasets",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "filipe"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]

#-----------------------------------------------------------------

# GLOBAL & SEED
seed = 1
root-model-dir = "./model/"
root-profiles-dir = "./profiles/"
root-outputs-dir = "./outputs/"

# PROFILES
# "./utils/profile/Mobilenet_v2.json"
# "./utils/profile/Shufflenet_v2_x0_5.json"
# "./utils/profile/Resnext50_32x4d.json"
# "./utils/profile/Lstm.json"
# "./utils/profile/CRNNResNetAttn.json"
# "./utils/profile/simplecnn_scaled.json"
devices-profile-path = "./utils/profile/Mobilenet_v2.json"
net-speed-path = "./utils/profile/bandwidth.json"
carbon-data-path = "./utils/profile/carbon.json"

# MODELS — teste local minimal com Mobilenet_v2
# "simplecnn"
# "Mobilenet_v2"
# "Shufflenet_v2_x0_5"
# "Resnext50_32x4d"
# "Lstm"
# "CRNNResNetAttn"
model-name = "Mobilenet_v2"
# shape: CIFAR10 32x32 vs ImageNet-style 224x224 (Mobilenet)
#input-shape = "(3, 32, 32)"
input-shape = "(3,224,224)"
# classes
num-classes = 10 #CRNNResNetAttn: 12 Lstm: - Others: 10
# model independent
epochs = 100 #real deploy: 5
learning-rate = 1e-2 #CRNNResNetAttn: 3e-4 Others: 1e-3
weight-decay = 1e-5
decay-step = 10
momentum = 0.9

# DEVICE CONFIGURATIONS
use-battery = false
prefer-time = "EQUAL" # SLOW, EQUAL, FAST
prefer-battery = "EQUAL" # LOW, MEDIUM, HIGH, EQUAL
prefer-carbon = "UNIFORM" # LOW, HIGH, UNIFORM
battery-profile-low = 100
battery-profile-medium = 200
battery-profile-high = 300
carbon-region = "United States"
net-scenario = "US"

# DATASET
# "flwrlabs/shakespeare"
# "uoft-cs/cifar10"
# "speech_commands"
hugginface-id = "uoft-cs/cifar10"
dir-alpha = 0.3 #0.1, 0.3, 1.0
batch-size = 64

# client
battery-threshold = 0.1

# strategy — teste local minimal (poucos clientes/rodadas para passar do [INIT])
aggregation-name = "fedavg"
participants-name = "constant"
selection-name = "fedcs"

num-clients = 100
num-rounds = 10
num-participants = 10
num-evaluators = 10
num-candidates = 10

#TwoPhase
num-participants-bcp = 5
num-participants-acp = 5
smooth-window = 5
tau-deriv = 0.005
cp=25

#Critical
is-critical = false

#Recombination
mult-factor = 1
prioritize-sim = true

#FedDyn
# *selection-name = "feddyn"
alpha-coef = 0.01

#FedCS
# *selection-name = "fedcs"
pretrain-rounds = 1      # teste minimal
beta = 0.65              # Limiar para considerar uma classe como "Large-Capacity"
pf = 0.5                 # Taxa de poda alta (para classes grandes)
pl = 0.2                 # Taxa de poda baixa (para classes pequenas/restantes)

[tool.flwr.federations]
default = "local-simulation"

# IMPORTANT: num-supernodes must be >= num-clients. The server waits for num_clients
# to connect; if fewer supernodes exist, it hangs after [INIT] with no error.
# local-simulation: minimal (3 clients) para teste Mobilenet_v2.
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0
options.backend.init_args.num_cpus = 2
options.backend.init_args.num_gpus = 0

# Use this when running with num-clients=100 (e.g. FedCS pretrain sweeps) locally.
[tool.flwr.federations.local-simulation-100]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0
options.backend.init_args.num_cpus = 8
options.backend.init_args.num_gpus = 0

[tool.flwr.federations.gpu-sim-dl]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.5
options.backend.init_args.num_cpus = 25
options.backend.init_args.num_gpus = 3

[tool.flwr.federations.gpu-sim-dl-16]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.5
options.backend.init_args.num_cpus = 25
options.backend.init_args.num_gpus = 6

[tool.flwr.federations.gpu-sim-dl-17]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.5
options.backend.init_args.num_cpus = 25
options.backend.init_args.num_gpus = 3

[tool.flwr.federations.gpu-sim-dl-02]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.5
options.backend.init_args.num_cpus = 10
options.backend.init_args.num_gpus = 2

[tool.flwr.federations.gpu-sim-dl-24]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.5
options.backend.init_args.num_cpus = 10
options.backend.init_args.num_gpus = 3

[tool.flwr.federations.gpu-sim-lrc]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.2
options.backend.init_args.num_cpus = 10
options.backend.init_args.num_gpus = 1